--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <title>Sidebar Navigation</title>
 </head>
 <body>
-    <nav class="sidebar">
+    <nav class="sidebar" id="sidebar">
         <header>
             <div class="image">
                 <span class="img">
@@ -54,31 +54,31 @@
             <div class="menu">
                 <ul class="menu-link">
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="showPage('home')">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text">HOME</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="showPage('about')">
                             <i class='bx bxs-user-detail icon'></i>
                             <span class="text">ABOUT</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="showPage('skill')">
                             <i class='bx bx-laptop icon'></i>
                             <span class="text">SKILL</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="showPage('project')">
                             <i class='bx bx-file-blank icon'></i>
                             <span class="text">PROJECT</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="showPage('contact')">
                             <i class='bx bx-envelope icon'></i>
                             <span class="text">CONTACT</span>
                         </a>
@@ -91,8 +91,16 @@
             <i class='bx bx-moon icon'></i>
             <span class="text">Dark Mode</span>
         </button>
-
     </nav>
+    
+    <div class="content" id="content">
+        <div id="home" class="page">This is the Home page.</div>
+        <div id="about" class="page" style="display:none;">This is the About page.</div>
+        <div id="skill" class="page" style="display:none;">This is the Skill page.</div>
+        <div id="project" class="page" style="display:none;">This is the Project page.</div>
+        <div id="contact" class="page" style="display:none;">This is the Contact page.</div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
