--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <button class="theme-toggle-button" id="theme-toggle-btn">
-            <i class='bx bx-moon icon'></i><span class="text">Dark Mode</span>
+            <i class='bx bx-moon icon'></i><span class="text"></span>
         </button>
     </nav>
 
