--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <header>
             <div class="image">
                 <span class="img">
-                    <img src="./img/image.png" alt="logo">
+                    <img src="image.png" alt="logo">
                 </span>
                 <div class="texts">
                     <span class="log-name">AFIQ CODING LAB</span>
